--- a/python/Python/Entorno 1/Funciones/Ejercicio 1.ipynb
+++ b/python/Python/Entorno 1/Funciones/Ejercicio 1.ipynb
@@ -349,9 +349,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El valor no es válido\n"
+     ]
+    }
+   ],
    "source": []
   }
  ],
