--- a/python/Python/Entorno 1/Funciones/Ejercicio 1.ipynb
+++ b/python/Python/Entorno 1/Funciones/Ejercicio 1.ipynb
@@ -294,6 +294,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Factorial: 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def factoRecur(num):\n",
+    "    factorial = num\n",
+    "    if num > 1:\n",
+    "        factorial = num*factoRecur(num-1)\n",
+    "        return factorial\n",
+    "    else:\n",
+    "        return factorial\n",
+    "    \n",
+    "    \n",
+    "def main():\n",
+    "    print(\"Factorial:\",factoRecur(5))\n",
+    "\n",
+    "main()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
