--- a/python/Python/Entorno 1/Ficheros/EjerciciosFicheros.ipynb
+++ b/python/Python/Entorno 1/Ficheros/EjerciciosFicheros.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,17 +20,37 @@
     "            cadenaDeNombres.append(x[0:len(x)-1])\n",
     "        return cadenaDeNombres\n",
     "\n",
-    "def colocarDominio():\n",
+    "def colocarDominioCdm():\n",
     "    usr = recogerNombres()\n",
     "    correosCompletos = \"\"\n",
     "    for x in usr:\n",
-    "        correosCompletos+=x+\"@cdmfp.es\\n\"\n",
+    "        correosCompletos+=x+\"@cdm.org\\n\"\n",
     "    return correosCompletos\n",
     "\n",
+    "def colocarDominioDam():\n",
+    "    usr = recogerNombres()\n",
+    "    correosCompletos = \"\"\n",
+    "    for x in usr:\n",
+    "        correosCompletos+=x+\"@dam.cdm.org\\n\"\n",
+    "    return correosCompletos\n",
+    "\n",
+    "def colocarDominioDaw():\n",
+    "    usr = recogerNombres()\n",
+    "    correosCompletos = \"\"\n",
+    "    for x in usr:\n",
+    "        correosCompletos+=x+\"@daw.cdm.org\\n\"\n",
+    "    return correosCompletos\n",
+    "\n",
+    "\n",
+    "\n",
     "def escribirArchivo():\n",
-    "    cadenaCompleta = colocarDominio()\n",
-    "    with open(\"archivos/usuariosConCorreo.txt\",\"w\") as archivo:\n",
-    "        archivo.write(cadenaCompleta)\n",
+    "    cadenaCompleta = colocarDominioCdm()\n",
+    "    cadenaCompleta2 = colocarDominioDam()\n",
+    "    cadenaCompleta3 = colocarDominioDaw()\n",
+    "    with open(\"archivos/usuariosConCorreo2.txt\",\"w\") as archivo:\n",
+    "        archivo.write(cadenaCompleta+cadenaCompleta2+cadenaCompleta3)\n",
+    "\n",
+    "\n",
     "\n",
     "def __main__():\n",
     "    escribirArchivo()\n",
